Fix kmail2 message view with qtwebengine hidpi is broken

BUG: 368843
FIXED-IN: 5.3.2